@@ -1,24 +1,37 @@
 package com.google.daq.mqtt.sequencer.sequences;
 
-import static com.google.daq.mqtt.util.TimePeriodConstants.NINETY_SECONDS_MS;
+import static com.google.common.base.Preconditions.checkState;
+import static com.google.common.collect.Sets.symmetricDifference;
 import static com.google.daq.mqtt.util.TimePeriodConstants.TWO_MINUTES_MS;
+import static com.google.udmi.util.CleanDateFormat.cleanDate;
+import static com.google.udmi.util.CleanDateFormat.cleanInstantDate;
+import static com.google.udmi.util.CleanDateFormat.dateEquals;
 import static com.google.udmi.util.GeneralUtils.CSV_JOINER;
+import static com.google.udmi.util.GeneralUtils.ifNotNullGet;
+import static com.google.udmi.util.GeneralUtils.ifNotTrueGet;
+import static com.google.udmi.util.GeneralUtils.ifNullElse;
+import static com.google.udmi.util.GeneralUtils.joinOrNull;
 import static com.google.udmi.util.JsonUtil.isoConvert;
+import static com.google.udmi.util.JsonUtil.stringifyTerse;
 import static java.lang.String.format;
 import static java.util.Objects.requireNonNull;
+import static java.util.Optional.ofNullable;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.Assert.assertNotNull;
 import static udmi.schema.Bucket.DISCOVERY_SCAN;
 import static udmi.schema.Bucket.ENUMERATION;
 import static udmi.schema.Bucket.ENUMERATION_FAMILIES;
 import static udmi.schema.Bucket.ENUMERATION_FEATURES;
 import static udmi.schema.Bucket.ENUMERATION_POINTSET;
-import static udmi.schema.FeatureEnumeration.FeatureStage.ALPHA;
-import static udmi.schema.FeatureEnumeration.FeatureStage.BETA;
-import static udmi.schema.FeatureEnumeration.FeatureStage.PREVIEW;
-import static udmi.schema.FeatureEnumeration.FeatureStage.STABLE;
+import static udmi.schema.Depths.Depth.ENTRIES;
+import static udmi.schema.FamilyDiscoveryState.Phase.ACTIVE;
+import static udmi.schema.FamilyDiscoveryState.Phase.DONE;
+import static udmi.schema.FamilyDiscoveryState.Phase.PENDING;
+import static udmi.schema.FamilyDiscoveryState.Phase.STOPPED;
+import static udmi.schema.FeatureDiscovery.FeatureStage.ALPHA;
+import static udmi.schema.FeatureDiscovery.FeatureStage.BETA;
+import static udmi.schema.FeatureDiscovery.FeatureStage.PREVIEW;
+import static udmi.schema.FeatureDiscovery.FeatureStage.STABLE;
 
 import com.google.common.collect.Sets;
 import com.google.common.collect.Sets.SetView;
@@ -26,7 +39,7 @@ import com.google.daq.mqtt.sequencer.Feature;
 import com.google.daq.mqtt.sequencer.SequenceBase;
 import com.google.daq.mqtt.sequencer.Summary;
 import com.google.daq.mqtt.sequencer.semantic.SemanticDate;
-import com.google.udmi.util.CleanDateFormat;
+import java.time.Duration;
 import java.time.Instant;
 import java.util.Date;
 import java.util.HashMap;
@@ -34,45 +47,57 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import org.jetbrains.annotations.Nullable;
 import org.junit.Before;
 import org.junit.Test;
+import udmi.lib.ProtocolFamily;
 import udmi.schema.Bucket;
+import udmi.schema.Depths;
+import udmi.schema.Depths.Depth;
 import udmi.schema.DiscoveryConfig;
-import udmi.schema.DiscoveryEvent;
-import udmi.schema.Enumerate;
+import udmi.schema.DiscoveryEvents;
 import udmi.schema.FamilyDiscoveryConfig;
 import udmi.schema.FamilyDiscoveryState;
-import udmi.schema.FeatureEnumeration;
+import udmi.schema.FeatureDiscovery;
 
 /**
  * Validation tests for discovery scan and enumeration capabilities.
  */
 public class DiscoverySequences extends SequenceBase {
 
-  public static final int SCAN_START_DELAY_SEC = 10;
+  public static final Duration SCAN_START_DELAY = Duration.ofSeconds(10);
+  public static final int SCAN_START_DELAY_SEC = (int) SCAN_START_DELAY.getSeconds();
+  public static final int SCAN_START_JITTER_SEC = 3;
   private static final int SCAN_ITERATIONS = 2;
-  private HashMap<String, Date> previousGenerations;
-  private Set<String> families;
+  private static final String scanFamily = ProtocolFamily.VENDOR;
+  private static final Date LONG_TIME_AGO = new Date(12897321);
+  private Set<String> metaFamilies;
+  private Date scanStartTime;
+
+  private static boolean isActive(Entry<String, FeatureDiscovery> entry) {
+    return ofNullable(entry.getValue().stage).orElse(STABLE).compareTo(BETA) >= 0;
+  }
+
+  @Nullable
+  private static Depth enumerationDepthIf(boolean shouldEnumerate) {
+    return shouldEnumerate ? ENTRIES : null;
+  }
 
   @Before
   public void setupExpectedParameters() {
     allowDeviceStateChange("discovery");
   }
 
-  private static boolean isActive(Entry<String, FeatureEnumeration> entry) {
-    return Optional.ofNullable(entry.getValue().stage).orElse(STABLE).compareTo(BETA) >= 0;
-  }
-
-  private DiscoveryEvent runEnumeration(Enumerate enumerate) {
+  private DiscoveryEvents runEnumeration(Depths depths) {
     deviceConfig.discovery = new DiscoveryConfig();
-    deviceConfig.discovery.enumerate = enumerate;
+    deviceConfig.discovery.depths = depths;
     untilTrue("enumeration not active", () -> deviceState.discovery.generation == null);
 
-    Date startTime = SemanticDate.describe("generation start time", CleanDateFormat.cleanDate());
+    Date startTime = SemanticDate.describe("generation start time", cleanDate());
     deviceConfig.discovery.generation = startTime;
     info("Starting empty enumeration at " + isoConvert(startTime));
     untilTrue("matching enumeration generation",
@@ -81,43 +106,51 @@ public class DiscoverySequences extends SequenceBase {
     deviceConfig.discovery.generation = null;
     untilTrue("cleared enumeration generation", () -> deviceState.discovery.generation == null);
 
-    List<DiscoveryEvent> allEvents = popReceivedEvents(DiscoveryEvent.class);
+    List<DiscoveryEvents> allEvents = popReceivedEvents(DiscoveryEvents.class);
     // Filter for enumeration events, since there will sometimes be lingering scan events.
-    List<DiscoveryEvent> enumEvents = allEvents.stream().filter(event -> event.scan_addr == null)
-        .collect(Collectors.toList());
+    List<DiscoveryEvents> enumEvents = allEvents.stream().filter(event -> event.scan_addr == null)
+        .toList();
     assertEquals("a single discovery event received", 1, enumEvents.size());
-    DiscoveryEvent event = enumEvents.get(0);
+    DiscoveryEvents event = enumEvents.get(0);
     info("Received discovery generation " + isoConvert(event.generation));
     assertEquals("matching event generation", startTime, event.generation);
     return event;
   }
 
-  private void checkSelfEnumeration(DiscoveryEvent event, Enumerate enumerate) {
-    if (isTrue(enumerate.families)) {
-      Set<String> models = Optional.ofNullable(deviceMetadata.localnet)
+  private void checkSelfEnumeration(DiscoveryEvents event, Depths depths) {
+    if (shouldEnumerate(depths.families)) {
+      Set<String> models = ofNullable(deviceMetadata.localnet)
           .map(localnet -> localnet.families.keySet()).orElse(null);
-      Set<String> events = Optional.ofNullable(event.families).map(Map::keySet).orElse(null);
+      Set<String> events = ofNullable(event.families).map(Map::keySet)
+          .orElse(null);
       checkThat("family enumeration matches", () -> models.size() == events.size());
     } else {
-      checkThat("no family enumeration", () -> event.families == null);
+      checkThat("no family enumeration exists", () -> event.families == null);
     }
 
-    if (isTrue(enumerate.features)) {
-      checkFeatureEnumeration(event.features);
+    if (shouldEnumerate(depths.features)) {
+      checkFeatureDiscovery(event.features);
     } else {
-      checkThat("no feature enumeration", () -> event.features == null);
+      checkThat("no feature enumeration exists", () -> event.features == null);
     }
 
-    if (isTrue(enumerate.uniqs)) {
-      int expectedSize = Optional.ofNullable(deviceMetadata.pointset.points).map(HashMap::size)
+    if (shouldEnumerate(depths.refs)) {
+      int expectedSize = ofNullable(deviceMetadata.pointset.points).map(HashMap::size)
           .orElse(0);
-      checkThat("enumerated point count matches", () -> event.uniqs.size() == expectedSize);
+      checkThat("enumerated point count matches", () -> event.refs.size() == expectedSize);
     } else {
-      checkThat("no point enumeration", () -> event.uniqs == null);
+      checkThat("no point enumeration exists", () -> event.refs == null);
     }
   }
 
-  private void checkFeatureEnumeration(Map<String, FeatureEnumeration> features) {
+  private boolean shouldEnumerate(Depth depth) {
+    return ifNullElse(depth, false, d -> switch (d) {
+      default -> false;
+      case ENTRIES, DETAILS -> true;
+    });
+  }
+
+  private void checkFeatureDiscovery(Map<String, FeatureDiscovery> features) {
     Set<String> enumeratedFeatures = features.entrySet().stream()
         .filter(DiscoverySequences::isActive).map(Entry::getKey).collect(Collectors.toSet());
     requireNonNull(deviceMetadata.features, "device metadata features missing");
@@ -136,38 +169,38 @@ public class DiscoverySequences extends SequenceBase {
   }
 
   private boolean isTrue(Boolean condition) {
-    return Optional.ofNullable(condition).orElse(false);
+    return ofNullable(condition).orElse(false);
   }
 
-  @Test(timeout = NINETY_SECONDS_MS)
+  @Test(timeout = TWO_MINUTES_MS)
   @Feature(bucket = ENUMERATION, stage = PREVIEW)
   @Summary("Check enumeration of nothing at all")
   public void empty_enumeration() {
-    Enumerate enumerate = new Enumerate();
-    DiscoveryEvent event = runEnumeration(enumerate);
+    Depths enumerate = new Depths();
+    DiscoveryEvents event = runEnumeration(enumerate);
     checkSelfEnumeration(event, enumerate);
   }
 
-  @Test(timeout = NINETY_SECONDS_MS)
+  @Test(timeout = TWO_MINUTES_MS)
   @Feature(bucket = ENUMERATION_POINTSET, stage = ALPHA)
   @Summary("Check enumeration of device points")
   public void pointset_enumeration() {
     if (!catchToFalse(() -> deviceMetadata.pointset.points != null)) {
       skipTest("No metadata pointset points defined");
     }
-    Enumerate enumerate = new Enumerate();
-    enumerate.uniqs = true;
-    DiscoveryEvent event = runEnumeration(enumerate);
+    Depths enumerate = new Depths();
+    enumerate.refs = ENTRIES;
+    DiscoveryEvents event = runEnumeration(enumerate);
     checkSelfEnumeration(event, enumerate);
   }
 
-  @Test(timeout = NINETY_SECONDS_MS)
+  @Test(timeout = TWO_MINUTES_MS)
   @Feature(bucket = ENUMERATION_FEATURES, stage = PREVIEW)
   @Summary("Check enumeration of device features")
   public void feature_enumeration() {
-    Enumerate enumerate = new Enumerate();
-    enumerate.features = true;
-    DiscoveryEvent event = runEnumeration(enumerate);
+    Depths enumerate = new Depths();
+    enumerate.features = ENTRIES;
+    DiscoveryEvents event = runEnumeration(enumerate);
     checkSelfEnumeration(event, enumerate);
   }
 
@@ -175,9 +208,9 @@ public class DiscoverySequences extends SequenceBase {
   @Summary("Check enumeration of network families")
   @Feature(bucket = ENUMERATION_FAMILIES, stage = ALPHA)
   public void family_enumeration() {
-    Enumerate enumerate = new Enumerate();
-    enumerate.families = true;
-    DiscoveryEvent event = runEnumeration(enumerate);
+    Depths enumerate = new Depths();
+    enumerate.families = ENTRIES;
+    DiscoveryEvents event = runEnumeration(enumerate);
     checkSelfEnumeration(event, enumerate);
   }
 
@@ -185,102 +218,195 @@ public class DiscoverySequences extends SequenceBase {
   @Feature(bucket = ENUMERATION, stage = ALPHA)
   @Summary("Check enumeration of multiple categories")
   public void multi_enumeration() {
-    Enumerate enumerate = new Enumerate();
-    enumerate.families = isBucketEnabled(ENUMERATION_FAMILIES);
-    enumerate.features = isBucketEnabled(ENUMERATION_FEATURES);
-    enumerate.uniqs = isBucketEnabled(ENUMERATION_POINTSET);
-    DiscoveryEvent event = runEnumeration(enumerate);
+    Depths enumerate = new Depths();
+    enumerate.families = enumerateIfBucketEnabled(ENUMERATION_FAMILIES);
+    enumerate.features = enumerateIfBucketEnabled(ENUMERATION_FEATURES);
+    enumerate.refs = enumerateIfBucketEnabled(ENUMERATION_POINTSET);
+    DiscoveryEvents event = runEnumeration(enumerate);
     checkSelfEnumeration(event, enumerate);
   }
 
-  @Test(timeout = TWO_MINUTES_MS)
-  @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
-  @Summary("Check results of a single network family scan")
-  public void single_scan() {
-    initializeDiscovery();
-    Date startTime = CleanDateFormat.cleanDate(
-        Date.from(Instant.now().plusSeconds(SCAN_START_DELAY_SEC)));
-    boolean shouldEnumerate = true;
-    scheduleScan(startTime, null, shouldEnumerate);
-    untilTrue("scheduled scan start",
-        () -> families.stream().anyMatch(familyScanActivated(startTime))
-            || families.stream().anyMatch(this::stateGenerationMismatch)
-            || !deviceState.timestamp.before(startTime));
-    if (deviceState.timestamp.before(startTime)) {
-      warning("scan started before activation: " + deviceState.timestamp + " < " + startTime);
-      assertFalse("premature activation",
-          families.stream().anyMatch(familyScanActivated(startTime)));
-      assertFalse("premature generation",
-          families.stream().anyMatch(this::stateGenerationMismatch));
-      fail("unknown reason");
-    }
-    untilTrue("scan activation", () -> families.stream().allMatch(familyScanActivated(startTime)));
-    untilTrue("scan completed", () -> families.stream().allMatch(familyScanComplete(startTime)));
-    List<DiscoveryEvent> receivedEvents = popReceivedEvents(
-        DiscoveryEvent.class);
-    checkEnumeration(receivedEvents, shouldEnumerate);
-    Set<String> eventFamilies = receivedEvents.stream()
-        .flatMap(event -> event.families.keySet().stream())
-        .collect(Collectors.toSet());
-    assertTrue("all requested families present", eventFamilies.containsAll(families));
+  private Depth enumerateIfBucketEnabled(Bucket bucket) {
+    return enumerationDepthIf(isBucketEnabled(bucket));
   }
 
-  private void checkEnumeration(List<DiscoveryEvent> receivedEvents, boolean shouldEnumerate) {
-    Predicate<DiscoveryEvent> hasPoints = event -> event.uniqs != null
-        && !event.uniqs.isEmpty();
+  @Test(timeout = TWO_MINUTES_MS)
+  @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
+  @Summary("Check that a scan scheduled in the past never starts")
+  public void single_scan_past() {
+    initializeDiscovery();
+    scanStartTime = LONG_TIME_AGO;
+    boolean shouldEnumerate = false;
+    configureScan(scanStartTime, null, shouldEnumerate);
+    waitFor("scan schedule initially complete", this::detailScanComplete);
+    sleepFor("false start check delay", SCAN_START_DELAY);
+    waitFor("scan schedule still complete", this::detailScanComplete);
+    List<DiscoveryEvents> receivedEvents = popReceivedEvents(DiscoveryEvents.class);
+    checkThat("there were no received discovery events", receivedEvents.isEmpty());
+  }
+
+  @Test(timeout = TWO_MINUTES_MS)
+  @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
+  @Summary("Check results of a single scan scheduled soon")
+  public void single_scan_future() {
+    initializeDiscovery();
+    checkState(scanStartTime == null, "scanStartTime not null");
+    scanStartTime = cleanInstantDate(Instant.now().plus(SCAN_START_DELAY));
+    boolean shouldEnumerate = false;
+    configureScan(scanStartTime, null, shouldEnumerate);
+    Duration waitingPeriod = SCAN_START_DELAY.plus(SCAN_START_DELAY);
+
+    waitFor("scheduled scan pending", waitingPeriod, this::detailScanPending);
+
+    waitFor("scheduled scan active", waitingPeriod, this::detailScanActive);
+
+    long delta = Math.abs(
+        Duration.between(deviceState.timestamp.toInstant(), scanStartTime.toInstant()).toSeconds());
+    checkThat("scan start near expected generation time", delta <= SCAN_START_JITTER_SEC,
+        format("scan start %ss different from expected %s", delta, isoConvert(scanStartTime)));
+
+    waitFor("scheduled scan complete", waitingPeriod, this::detailScanComplete);
+
+    List<DiscoveryEvents> events = popReceivedEvents(DiscoveryEvents.class);
+
+    Date generation = deviceConfig.discovery.families.get(scanFamily).generation;
+    Function<DiscoveryEvents, String> invalidator = event -> invalidReasons(event, generation);
+    checkThat("discovery events were received", !events.isEmpty());
+    Set<String> reasons = events.stream().map(invalidator).filter(Objects::nonNull)
+        .collect(Collectors.toSet());
+    checkThat("discovery events were valid", reasons.isEmpty(), CSV_JOINER.join(reasons));
+
+    Set<String> duplicates = events.stream().map(x -> x.scan_addr)
+        .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()))
+        .entrySet().stream().filter(p -> p.getValue() > 1).map(Map.Entry::getKey)
+        .collect(Collectors.toSet());
+    checkThat("all scan addresses are unique", duplicates.isEmpty(),
+        "duplicates: " + CSV_JOINER.join(duplicates));
+
+    Set<String> discoveredAddresses = events.stream().map(x -> x.scan_addr)
+        .collect(Collectors.toSet());
+    Set<String> expectedAddresses = siteModel.metadataStream()
+        .map(e -> catchToNull(() -> e.getValue().localnet.families.get(scanFamily).addr))
+        .filter(Objects::nonNull).collect(Collectors.toSet());
+    SetView<String> differences = symmetricDifference(discoveredAddresses, expectedAddresses);
+    checkThat("all expected addresses were found", differences.isEmpty(),
+        CSV_JOINER.join(differences));
+
+    checkEnumeration(events, shouldEnumerate);
+  }
+
+  private String detailScanPending() {
+    return ifNotTrueGet(scanPending(scanStartTime).test(scanFamily),
+        format("Expected pending %s but %s", scanStartTime, describedFamilyState()));
+  }
+
+  private String detailScanActive() {
+    return ifNotTrueGet(scanActive(scanStartTime).test(scanFamily),
+        format("Expected active %s but %s", scanStartTime, describedFamilyState()));
+  }
+
+  private String detailScanComplete() {
+    return ifNotTrueGet(scanComplete(scanStartTime).test(scanFamily),
+        format("Expected complete %s but %s", isoConvert(scanStartTime), describedFamilyState()));
+  }
+
+  private String invalidReasons(DiscoveryEvents discoveryEvent, Date scanGeneration) {
+    try {
+      assertEquals("bad scan family", scanFamily, discoveryEvent.scan_family);
+      assertEquals("bad generation", scanGeneration, discoveryEvent.generation);
+      assertNotNull("empty scan address", discoveryEvent.scan_addr);
+    } catch (Exception e) {
+      return e.getMessage();
+    }
+    return null;
+  }
+
+  private String describedFamilyState() {
+    return stringifyTerse(getFamilyDiscoveryState());
+  }
+
+  private FamilyDiscoveryState getFamilyDiscoveryState() {
+    return ifNotNullGet(deviceState.discovery.families, map -> map.get(scanFamily));
+  }
+
+  private void checkEnumeration(List<DiscoveryEvents> receivedEvents, boolean shouldEnumerate) {
+    Predicate<DiscoveryEvents> hasRefs = event -> event.refs != null && !event.refs.isEmpty();
     if (shouldEnumerate) {
-      assertTrue("with enumeration", receivedEvents.stream().allMatch(hasPoints));
+      checkThat("all events have discovered refs", receivedEvents.stream().allMatch(hasRefs));
     } else {
-      assertTrue("sans enumeration", receivedEvents.stream().noneMatch(hasPoints));
+      checkThat("no events have discovered refs", receivedEvents.stream().noneMatch(hasRefs));
     }
   }
 
   @Test(timeout = TWO_MINUTES_MS)
   @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
-  @Summary("Check periodic scan of address families")
-  public void periodic_scan() {
+  @Summary("Check periodic scan on a fixed schedule amd enumeration")
+  public void periodic_scan_fixed_enumerate() {
     initializeDiscovery();
-    Date startTime = CleanDateFormat.cleanDate();
+    checkState(scanStartTime == null, "scanStartTime not null");
+    scanStartTime = cleanDate();
     boolean shouldEnumerate = true;
-    scheduleScan(startTime, SCAN_START_DELAY_SEC, shouldEnumerate);
-    Instant endTime = Instant.now().plusSeconds(SCAN_START_DELAY_SEC * SCAN_ITERATIONS);
+    configureScan(scanStartTime, SCAN_START_DELAY, shouldEnumerate);
+    Instant endTime = Instant.now().plusSeconds(SCAN_START_DELAY.getSeconds() * SCAN_ITERATIONS);
     untilUntrue("scan iterations", () -> Instant.now().isBefore(endTime));
-    String oneFamily = families.iterator().next();
+    String oneFamily = metaFamilies.iterator().next();
     Date finishTime = deviceState.discovery.families.get(oneFamily).generation;
-    assertTrue("premature termination",
-        families.stream().noneMatch(familyScanComplete(finishTime)));
-    List<DiscoveryEvent> receivedEvents = popReceivedEvents(DiscoveryEvent.class);
+    checkThat("scan did not terminate prematurely",
+        metaFamilies.stream().noneMatch(scanComplete(finishTime)));
+    List<DiscoveryEvents> receivedEvents = popReceivedEvents(DiscoveryEvents.class);
     checkEnumeration(receivedEvents, shouldEnumerate);
-    Set<String> eventFamilies = receivedEvents.stream()
-        .flatMap(event -> event.families.keySet().stream())
-        .collect(Collectors.toSet());
-    assertTrue("all requested families present", eventFamilies.containsAll(families));
-    Map<String, List<DiscoveryEvent>> receivedEventsGrouped = receivedEvents.stream()
-        .collect(Collectors.groupingBy(e -> e.scan_family + "." + e.scan_addr));
-    assertTrue("scan iteration",
-        receivedEventsGrouped.values().stream().allMatch(list -> list.size() == SCAN_ITERATIONS));
+  }
+
+  @Test(timeout = TWO_MINUTES_MS)
+  @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
+  @Summary("Check periodic scan on a floating schedule")
+  public void periodic_scan_floating() {
+    ifTrueSkipTest(true, "Not yet implemented");
+  }
+
+  @Test(timeout = TWO_MINUTES_MS)
+  @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
+  @Summary("Check results of cancelling a pending scan")
+  public void cancel_before_start() {
+    ifTrueSkipTest(true, "Not yet implemented");
+  }
+
+  @Test(timeout = TWO_MINUTES_MS)
+  @Feature(bucket = DISCOVERY_SCAN, stage = ALPHA)
+  @Summary("Check results of cancelling a periodic scan")
+  public void cancel_periodic() {
+    ifTrueSkipTest(true, "Not yet implemented");
   }
 
   private void initializeDiscovery() {
-    families = catchToNull(() -> deviceMetadata.discovery.families.keySet());
-    if (families == null || families.isEmpty()) {
+    metaFamilies = catchToNull(() -> deviceMetadata.discovery.families.keySet());
+    if (metaFamilies == null || metaFamilies.isEmpty()) {
       skipTest("No discovery families configured");
     }
     deviceConfig.discovery = new DiscoveryConfig();
     deviceConfig.discovery.families = new HashMap<>();
-    untilTrue("all scans not active", () -> families.stream().noneMatch(familyScanActivated(null)));
-    previousGenerations = new HashMap<>();
-    families.forEach(family -> previousGenerations.put(family, getStateFamilyGeneration(family)));
+    untilTrue("discovery families defined", () -> deviceState.discovery.families != null);
+    HashMap<String, FamilyDiscoveryConfig> configFamilies = deviceConfig.discovery.families;
+    HashMap<String, FamilyDiscoveryState> stateFamilies = deviceState.discovery.families;
+    waitFor("discovery family keys match", () -> joinOrNull("mismatch: ",
+        symmetricDifference(configFamilies.keySet(), stateFamilies.keySet())
+    ));
+    untilTrue("no scans active",
+        () -> stateFamilies.keySet().stream().noneMatch(scanActive()));
   }
 
-  private void scheduleScan(Date startTime, Integer scanIntervalSec, boolean enumerate) {
-    info("Scan start scheduled for " + startTime);
-    families.forEach(family -> {
-      getConfigFamily(family).generation = SemanticDate.describe("family generation", startTime);
-      getConfigFamily(family).enumerate = enumerate;
-      getConfigFamily(family).scan_interval_sec = scanIntervalSec;
-    });
-    popReceivedEvents(DiscoveryEvent.class);  // Clear out any previously received events
+  private void configureScan(Date startTime, Duration scanInterval, boolean shouldEnumerate) {
+    Integer intervalSec = ofNullable(scanInterval).map(Duration::getSeconds).map(Long::intValue)
+        .orElse(null);
+    info(format("%s configured for family %s starting at %s evey %ss",
+        isTrue(shouldEnumerate) ? "Enumeration" : "Scan", scanFamily, startTime,
+        intervalSec));
+    FamilyDiscoveryConfig configFamily = getConfigFamily(scanFamily);
+    configFamily.generation = SemanticDate.describe("family generation", startTime);
+    configFamily.depth = enumerationDepthIf(shouldEnumerate);
+    configFamily.scan_interval_sec = intervalSec;
+    configFamily.scan_duration_sec = ofNullable(intervalSec).orElse(SCAN_START_DELAY_SEC);
+    popReceivedEvents(DiscoveryEvents.class);
   }
 
   private FamilyDiscoveryConfig getConfigFamily(String family) {
@@ -292,25 +418,40 @@ public class DiscoverySequences extends SequenceBase {
     return catchToNull(() -> getStateFamily(family).generation);
   }
 
-  private boolean stateGenerationMismatch(String family) {
-    return !Objects.equals(previousGenerations.get(family), getStateFamilyGeneration(family));
-  }
-
   private FamilyDiscoveryState getStateFamily(String family) {
     return deviceState.discovery.families.get(family);
   }
 
-  private Predicate<String> familyScanActive(Date startTime) {
-    return family -> catchToFalse(() -> getStateFamily(family).active
-        && CleanDateFormat.dateEquals(getStateFamily(family).generation, startTime));
+  private Predicate<String> scanAbsent() {
+    return family -> getStateFamily(family) == null;
   }
 
-  private Predicate<String> familyScanActivated(Date startTime) {
-    return family -> catchToFalse(() -> getStateFamily(family).active
-        || CleanDateFormat.dateEquals(getStateFamily(family).generation, startTime));
+  private Predicate<String> scanPending(Date startTime) {
+    return family -> {
+      FamilyDiscoveryState stateFamily = getStateFamily(family);
+      return stateFamily != null
+          && dateEquals(stateFamily.generation, startTime)
+          && stateFamily.phase == PENDING
+          && deviceState.timestamp.before(startTime);
+    };
   }
 
-  private Predicate<? super String> familyScanComplete(Date startTime) {
-    return familyScanActivated(startTime).and(familyScanActive(startTime).negate());
+  private Predicate<String> scanActive() {
+    return family -> getStateFamily(family).phase == ACTIVE;
+  }
+
+  private Predicate<String> scanActive(Date startTime) {
+    return family -> dateEquals(getStateFamily(family).generation, startTime)
+        && getStateFamily(family).phase == ACTIVE;
+  }
+
+  private Predicate<String> scanComplete(Date startTime) {
+    return family -> {
+      FamilyDiscoveryState stateFamily = getStateFamily(family);
+      return stateFamily != null
+          && dateEquals(stateFamily.generation, startTime)
+          && (stateFamily.phase == DONE || stateFamily.phase == STOPPED)
+          && deviceState.timestamp.after(startTime);
+    };
   }
 }
